aoc2021 - migrate to maven and java-11