@@ -1,14 +1,17 @@
-package dev.madfist;
+package dev.madfist.aoc2021;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class Day07 implements Day {
   @Override
   public String solveFirst(List<String> input) {
-    var positions = Arrays.stream(input.get(0).split(",")).map(Integer::parseInt).toList();
+    var positions = Arrays.stream(input.get(0).split(","))
+      .map(Integer::parseInt)
+      .collect(Collectors.toList());
     var distance = IntStream.range(Collections.min(positions), Collections.max(positions))
       .map(o -> positions.stream().mapToInt(p -> Math.abs(p - o)).sum()).min();
     return Integer.toString(distance.isPresent() ? distance.getAsInt() : -1);
@@ -16,7 +19,9 @@ public class Day07 implements Day {
 
   @Override
   public String solveSecond(List<String> input) {
-    var positions = Arrays.stream(input.get(0).split(",")).map(Integer::parseInt).toList();
+    var positions = Arrays.stream(input.get(0).split(","))
+      .map(Integer::parseInt)
+      .collect(Collectors.toList());
     var distance = IntStream.range(Collections.min(positions), Collections.max(positions))
       .map(o -> positions.stream().mapToInt(p -> Math.abs(p - o) * (Math.abs(p - o) + 1) / 2).sum()).min();
     return Integer.toString(distance.isPresent() ? distance.getAsInt() : -1);
